# chapter-api

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml
chapter-api/: Cargo.toml  README.md
chapter-api/docs/: api-documentation.yaml
chapter-api/src/: cached_immersive_analyzer.rs  handlers.rs  immersive.rs  immersive_handlers.rs  loader.rs  main.rs  models.rs  redis_client.rs  story_cache.rs
qdrant_data/: raft_state.json
rag-api/: .env.example  .gitignore  Dockerfile  README.md  chapter_processor.py  main_chapter.py  requirements.txt
